applications/meeting-server/deployment.yaml
# Deployment for meeting service
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: meeting-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: meeting-server
      component: web-server
  template:
    metadata:
      labels:
        app: meeting-server
        component: web-server
    spec:
      containers:
        - name: meeting-server
          image: swr.ap-southeast-1.myhuaweicloud.com/opensourceway/app-meeting-server:fef669c8b570c34b58792eb571038155f7e1c763
          volumeMounts:
            - mountPath: /work/app-meeting-server/meetings/migrations
              name: meeting-data-volume
          resources:
            requests:
              cpu: 2000m
              memory: 2000Mi
          command:
            - /bin/sh
            - -c
            - |
              # Fix wkhtmltopdf shared library issue when running on kernel which < 3.17
              # Read detail at https://stackoverflow.com/questions/54582864/missing-qt-libs-with-wkhtmltopdf-in-docker-on-debian-buster
              strip -R .note.ABI-tag /usr/lib/x86_64-linux-gnu/libQt5Core.so.5.11.3
              # incase the __init__.py does not exist in the mounted volume
              touch /work/app-meeting-server/meetings/migrations/__init__.py
              python manage.py collectstatic
              # python manage.py makemigrations
              # python manage.py migrate
              exec uwsgi --ini /work/app-meeting-server/deploy/production/uwsgi.ini
      volumes:
        - name: meeting-data-volume
          persistentVolumeClaim:
            claimName: meeting-data-volume
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: schedule-task
spec:
  replicas: 1
  selector:
    matchLabels:
      app: meeting-server
  template:
    metadata:
      labels:
        app: meeting-server
    spec:
      containers:
        - name: schedule-task
          image: swr.ap-southeast-1.myhuaweicloud.com/opensourceway/app-meeting-server:fef669c8b570c34b58792eb571038155f7e1c763
          command:
            - /bin/sh
            - -c
            - |
              python manage.py sendmessages
